--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,95 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    margin: 0px !important
+}
+
+
+
+
+
+
+
+
+
+
+.footer-menu {
+    display: block;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 80px;
+    background-color: #ffffff;
+    z-index: 998;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+.footer-menu ul {
+    display: inline-block;
+    width: 100%;
+    padding: 7px 0px 0 0px;
+    margin: 0px;
+}
+ul:not(.browser-default) {
+    padding-left: 0;
+    list-style-type: none;
+}
+.footer-menu li {
+    float: left;
+    width: 25%;
+    display: inline-block;
+    height: 100%;
+    text-align: center;
+}
+.footer-menu li a {
+    display: inline-block;
+    color: #546E7A;
+    cursor: pointer;
+}
+.footer-menu li i {
+    display: block;
+    font-size: 20px;
+}
+.footer-menu li span {
+    display: block;
+    font-size: 15px;
+    line-height: 20px;
+}
+.footer-menu li.active a {
+  color: #ff0000; /* Highlighted color */
+}
+
+.footer-menu li.active span {
+  font-weight: bold;
+}
+
+
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 10px;
+    color: #fff; /* White text by default */
+    text-align: center;
+    background-color: #525293;
+    font-family: 'Raleway';
+  }
+  
+  .header h1 {
+    margin: 0;
+    font-size: 1.5rem;
+    margin-left: 2%;
+  }
+  
+  /* Responsive styles */
+  @media (min-width: 768px) {
+    .header h1 {
+      font-size: 1.5rem;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .header h1 {
+      font-size: 1.5rem;
+    }
+  }
+  
